--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+@font-face {
+    font-family: "Figtree";
+    src: url("/fonts/Figtree-VariableFont_wght.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Figtree";
+    src: url("/fonts/Figtree-Italic-VariableFont_wght.ttf") format("truetype");
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "Figtree";
+    src: url("/fonts/static/Figtree-ExtraBold.ttf") format("truetype");
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Figtree";
+    src: url("/fonts/static/Figtree-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+}
+
 /*CSS RESET*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -48,3 +76,7 @@ table {
 	border-spacing: 0;
 }
 /*CSS RESET*/
+
+body {
+    font-family: "Figtree", sans-serif;
+}
