--- a/style.css
+++ b/style.css
@@ -26,6 +26,19 @@
     font-style: normal;
 }
 
+:root {
+    --yellow: hsl(47 88 63);
+
+    --gray-950: hsl(0 0 7);
+    --gray-500: hsl(0 0 42);
+
+    --ff-primary: "Figtree";
+
+    --fs-300: 0.875rem;
+    --fs-400: 1rem;
+    --fs-500: 1.5rem;
+}
+
 /*CSS RESET*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
